--- a/source/net/fortuna/ical4j/model/component/package.html
+++ b/source/net/fortuna/ical4j/model/component/package.html
@@ -1,4 +1,5 @@
 <html>
+<title>Package [net.fortuna.ical4j.model.component]</title>
 <body>
 Contains types used to represent the iCalendar component model.
 </body>
